core/kubewall-assets/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubewall
  labels:
    canUseExternalSecrets: "true"
